--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   pinput: ^2.2.21
   carousel_slider: ^4.0.0
   dots_indicator: ^2.1.0
+  #flick_video_player: ^0.3.1
+ # video_player: ^2.5.1
   #pin_code_fields: ^7.4.0
 
 dev_dependencies:
