--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^4.0.0
   dots_indicator: ^2.1.0
   qr_flutter: ^4.0.0
+  intl: ^0.18.0
   #flick_video_player: ^0.3.1
  # video_player: ^2.5.1
   #pin_code_fields: ^7.4.0
