--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  pinput: ^2.2.21
+  pinput: ^2.2.31
   carousel_slider: ^4.0.0
   dots_indicator: ^2.1.0
   qr_flutter: ^4.0.0
   intl: ^0.18.0
+  flick_video_player: ^0.5.0
+  video_player: ^2.5.2
   #flick_video_player: ^0.3.1
  # video_player: ^2.5.1
   #pin_code_fields: ^7.4.0
