--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.18.0
   flick_video_player: ^0.5.0
   video_player: ^2.5.2
+  visibility_detector: ^0.3.0
   #flick_video_player: ^0.3.1
  # video_player: ^2.5.1
   #pin_code_fields: ^7.4.0
