--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,13 +44,24 @@ dependencies:
   flick_video_player: ^0.5.0
   video_player: ^2.5.2
   visibility_detector: ^0.3.0
+  json_serializable: ^6.6.1
+  json_annotation: ^4.8.0
+  dio: ^4.0.4
+  retrofit: ^3.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  fluttertoast: ^8.0.7
+  flutter_libphonenumber: ^0.1.2
   #flick_video_player: ^0.3.1
  # video_player: ^2.5.1
   #pin_code_fields: ^7.4.0
 
 dev_dependencies:
+  build_runner:
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^4.1.2
+  hive_generator: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
